--- a/rootmachine.html
+++ b/rootmachine.html
@@ -4,7 +4,7 @@
   <head>
     <style>
        body {
-        background-image: url("file:///Users/pchan/Desktop/Screenshot%202020-06-25%20at%203.25.18%20PM.png");
+        background-image: url("sqrtx.png");
        }
        p {
          font-family: courier;
