--- a/rootmachine.html
+++ b/rootmachine.html
@@ -4,30 +4,53 @@
   <head>
     <style>
        body {
-        background-image: url("sqrtx.png");
-       }
-       p {
-         font-family: "courier new";
+        background-image: url("yrtx.png");
        }
        div {
-         font-family: "courier new";
+         font-family: "arial";
        }
-      </style>
-    </head>
-<body onload="loadPrevAnswer()">
-  <h1>root machine</h1>
-    <div>
-      <form name="valform">
-          <input type="text" name="rootnumber" id="rootnumber" value="2" />th root<br>
-          root of...(no values above 100 allowed here) <input type="text" name="n" id="n" value="2" /><br>
-          Precision: <input type="text" name="precision" id="precision" value="10" />
+       input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
 
-          <input type="button" onclick="start();" value="Go!">
+      input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      div {
+       font-family: "courier new";
+       border-radius: 5px;
+       background-color: #f2f2f2;
+       padding: 20px;
+      }
+    </style>
+  </head>
+<body onload="loadPrevAnswer()">
+  <h1>root machine!</h1>
+    <div>
+      <form action="/action_page.php">
+        <input type="text" id="rootnumber" name="rootnumber" placeholder="_th root">
+        <input type="text" id="n" name="n" placeholder="root of...">
+        <input type="text" id="precision" name="precision" placeholder="precision">
+
+        <input type="button" onclick="start();" value="Go!">
       </form>
     </div>
 
-  <p>This will calculate the root of your number.</p>
-  <p>The answer is <b id="answer"></b>.</p>
+  <div>The answer is <div id="answer"></div></div>
+
 
   <script src='big.min.js'></script>
     <script>
@@ -83,10 +106,10 @@
             document.getElementById("answer").innerHTML = "" + mid.round(precision);
             var a = mid.round(precision);
             document.getElementById("answer").innerHTML = "" + a;
-            setCookie("answer", "" + a, 100);
-            setCookie("rootnumber", rootnumber, 100);
-            setCookie("precision", precision, 100);
-            setCookie("n", n, 100);
+            setCookie("answer", "" + a, 50);
+            setCookie("rootnumber", rootnumber, 50);
+            setCookie("precision", precision, 50);
+            setCookie("n", n, 50);
             console.log(getCookie("answer"));
             return;
           }
@@ -97,7 +120,7 @@
             min = mid;
           }
           document.getElementById("answer").innerHTML = "about " + mid.round(precision);
-          setTimeout(function() {
+          setTimeout(function() {//pause so calculation is visible
             calculate(n, rootnumber, precision, min, max);
           }, 100)
         }
