fix up input width

--- a/rootmachine.html
+++ b/rootmachine.html
@@ -10,7 +10,7 @@
     }
 
     input[type=text] {
-      width: 130px;
+      width: 200px;
       box-sizing: border-box;
       border: 2px solid #ccc;
       border-radius: 4px;
@@ -36,7 +36,7 @@
     }
     #answer {
       word-break: break-all;
-      width: calc(100% - 20px)
+      width: calc(100% - 20px);
     }
   </style>
 </head>
