--- a/rootmachine.html
+++ b/rootmachine.html
@@ -34,6 +34,11 @@
       border-color: #c2c2c2;
       border-radius: 25px;
     }
+
+    .options:hover {
+      background-color: rgb(0, 0, 0);
+    }
+
     #answer {
       word-break: break-all;
       width: calc(100% - 20px);
@@ -86,7 +91,7 @@
     }
 
     function loadPrevAnswer() {
-      var answer = getCookie("answer");
+    var answer = getCookie("answer");
       if (answer != "") {
         document.getElementById("answer").innerHTML = answer;
         document.getElementById("rootnumber").value = getCookie("rootnumber");
@@ -143,7 +148,7 @@
 
       if (new_answer.gt(n.minus(error)) && new_answer.lt(n.plus(error))) {
         var a = mid.round(precision);
-        document.getElementById("answer").innerHTML = "(" + iteration + ") "+ a;
+        document.getElementById("answer").innerHTML = "(" + iteration + ") " + a;
         setCookie("answer", "" + a, 50);
         setCookie("rootnumber", rootnumber, 50);
         setCookie("precision", precision, 50);
@@ -163,8 +168,13 @@
       var n = parseInt(document.getElementById("n").value);
       var rootnumber = parseInt(document.getElementById("rootnumber").value);
       var precision = parseInt(document.getElementById("precision").value);
+
+      if (precision > 1000) {
+        alert("the presition you entered is too big. For now, presition is limited to 1000 decimal places.");
+      }
+
       console.log(n);
-      if (method === 'bi') {
+      if (method == 'bi') {
         calculate(new Big(n), rootnumber, precision, new Big(0), new Big(10), 1);
       } else {
         calculate_newton(new Big(n), rootnumber, precision, new Big(5), 1);
