--- a/rootmachine.html
+++ b/rootmachine.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Root machine calcutes the root of a number. You can control how many digits to calculate and the method. It also shows you how many steps the algrithom took to calculate the root.">
+  <meta name="keywords" content="root machine, math, mathematics, root, square root, calculator, root calculator, square root calculator">
+  <meta name="subject" content="mathematics">
+  <meta name="language" content="EN">
+  <meta name="revisit-after" content="7 days">
+  <link rel="apple-touch-icon" href="yrtx.png">
+  <link id="favicon" rel="icon" href="yrtx.png" type="image/png" sizes="16x16">
+
   <style>
     body {
       background-image: url("yrtx.png");
