Change color of calculate buttons

--- a/rootmachine.html
+++ b/rootmachine.html
@@ -11,6 +11,7 @@
   <meta name="revisit-after" content="7 days">
   <link rel="apple-touch-icon" href="yrtx.png">
   <link id="favicon" rel="icon" href="yrtx.png" type="image/png" sizes="16x16">
+  <title>Root Machine</title>
 
   <style>
     body {
@@ -47,6 +48,7 @@
 
     .options:hover {
       background-color: rgb(0, 0, 0);
+      background-color: #969696;
     }
 
     #answer {
