--- a/rootmachine.html
+++ b/rootmachine.html
@@ -47,7 +47,6 @@
     }
 
     .options:hover {
-      background-color: rgb(0, 0, 0);
       background-color: #969696;
     }
 
@@ -59,7 +58,7 @@
 </head>
 
 <body onload="loadPrevAnswer()">
-  <h1>root machine!</h1>
+  <h1>Welcome to Root Machine!</h1>
   <div>
     <form>
       <div>_th root</div>
