--- a/rootmachine.html
+++ b/rootmachine.html
@@ -15,9 +15,8 @@
 
   <style>
     body {
-      background-image: url("yrtx.png");
+      background-color: #083a57;
       font-family: sans-serif;
-      font-weight: 400;
     }
 
     input[type=text] {
@@ -40,7 +39,7 @@
 
     .options {
       height: 50px;
-      width: 200px;
+      width: 220px;
       border-style: solid;
       border-color: #c2c2c2;
       border-radius: 25px;
@@ -58,14 +57,14 @@
 </head>
 
 <body onload="loadPrevAnswer()">
-  <h1>Welcome to Root Machine!</h1>
+  <h1 style="color: white;">Welcome to Root Machine!</h1>
   <div>
     <form>
-      <div>_th root</div>
+      <label for="rootnumber">_th root:</label>
       <input type="text" id="rootnumber" name="rootnumber" placeholder="type values here..."><br>
-      <div>root of...</div>
+      <label for="n">Root of:</div>
       <input type="text" id="n" name="n" placeholder="type values here..."><br>
-      <div>precision</div>
+      <label for="precision">Precision (decimal places):</label>
       <input type="text" id="precision" name="precision" placeholder="type values here..."><br><br>
 
       <input class="options" type="button" onclick="start('bi');" value="calculate using bisection">
@@ -73,7 +72,9 @@
     </form>
   </div>
 
-  <div>The answer is <div id="answer"></div>
+  <div>The answer is <span id="answer"></span></div>
+    
+  <p>Try calculating the root of a number using both bisection and <a href="https://en.wikipedia.org/wiki/Newton%27s_method">Newton's method</a>. Newton's method is much faster - only 10 steps for 200 decimal places compared to over 600 steps for 200 decimal places using bisection.</p>
   </div>
 
 
@@ -181,7 +182,7 @@
       var precision = parseInt(document.getElementById("precision").value);
 
       if (precision > 1000) {
-        alert("the presition you entered is too big. For now, presition is limited to 1000 decimal places.");
+        alert("The precision you entered is too big. For now, precision is limited to 1000 decimal places.");
       }
 
       console.log(n);
