Change placeholders for inputs

--- a/rootmachine.html
+++ b/rootmachine.html
@@ -60,12 +60,12 @@
   <h1 style="color: white;">Welcome to Root Machine!</h1>
   <div>
     <form>
-      <label for="rootnumber">_th root:</label>
-      <input type="text" id="rootnumber" name="rootnumber" placeholder="type values here..."><br>
+      <label for="rootnumber">_th root (radical number):</label>
+      <input type="text" id="rootnumber" name="rootnumber" placeholder="Enter radical number here"><br>
       <label for="n">Root of:</div>
-      <input type="text" id="n" name="n" placeholder="type values here..."><br>
+      <input type="text" id="n" name="n" placeholder="Root of..."><br>
       <label for="precision">Precision (decimal places):</label>
-      <input type="text" id="precision" name="precision" placeholder="type values here..."><br><br>
+      <input type="text" id="precision" name="precision" placeholder="How many decimal places?"><br><br>
 
       <input class="options" type="button" onclick="start('bi');" value="calculate using bisection">
       <input class="options" type="button" onclick="start('new');" value="calculate using Newton's method">
