Change labels back to div

--- a/rootmachine.html
+++ b/rootmachine.html
@@ -17,6 +17,7 @@
     body {
       background-color: #083a57;
       font-family: sans-serif;
+      color: white;
     }
 
     input[type=text] {
@@ -60,11 +61,11 @@
   <h1 style="color: white;">Welcome to Root Machine!</h1>
   <div>
     <form>
-      <label for="rootnumber">_th root (radical number):</label>
+      <div>_th root (radical number):</div>
       <input type="text" id="rootnumber" name="rootnumber" placeholder="Enter radical number here"><br>
-      <label for="n">Root of:</div>
+      <div>Root of:</div>
       <input type="text" id="n" name="n" placeholder="Root of..."><br>
-      <label for="precision">Precision (decimal places):</label>
+      <div>Precision (decimal places):</div>
       <input type="text" id="precision" name="precision" placeholder="How many decimal places?"><br><br>
 
       <input class="options" type="button" onclick="start('bi');" value="calculate using bisection">
