Add back the inner box

--- a/rootmachine.html
+++ b/rootmachine.html
@@ -54,13 +54,19 @@
       border: 5px solid #ccc;
       border-radius: 8px;
     }
+    
+    .innerbox {
+      padding: 10px;
+      background-color: #eee;
+      border-radius: 8px;
+    }
   </style>
 </head>
 
 <body onload="loadPrevAnswer()">
   <h1 style="color: white;">Welcome to Root Machine!</h1>
   <div class="box">
-    <div>
+    <div class="innerbox">
       <form>
         <div>_th root (radical number):</div>
         <input type="text" id="rootnumber" name="rootnumber" placeholder="Enter radical number here"><br>
