Rename homepage (rootmachine.html) to index.html
And add GA

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D2XKKE3J91"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D2XKKE3J91');
+  </script>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Root machine calculates the root of a number. You can control how many digits to calculate and the method. It also shows you how many steps the algorithm took to calculate the root.">
