--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     <br>
     <div>The answer is <span id="answer"></span></div>
 
-    <p>Try calculating the root of a number using both bisection and <a href="https://en.wikipedia.org/wiki/Newton%27s_method">Newton's method</a>. Newton's method is much faster - only 10 steps for 200 decimal places compared to over 600 steps for 200 decimal places using bisection.</p>
+    <p>Try calculating the root of a number using both bisection and <a href="https://en.wikipedia.org/wiki/Newton%27s_method">Newton's method</a>. Newton's method is much faster - only 10 steps for 200 decimal places compared to over 600 steps for 200 decimal places using bisection.<br></p>
+    <p>This calculator auto-saves when done calculating</p>
   </div>
 
 
@@ -162,7 +163,7 @@
       } else {
         min = mid;
       }
-      document.getElementById("answer").innerHTML = "(" + iteration + ") about " + mid.round(precision);
+      document.getElementById("answer").innerHTML = "on step (" + iteration + ") about " + mid.round(precision);
       setTimeout(function() { //pause so calculation is visible
         calculate(n, rootnumber, precision, min, max, iteration + 1);
       }, 100)
